force-app/main/default/objects/Integration_Request_Template__mdt/Integration_Request_Template__mdt.object-meta.xml
<CustomObject>
    <label>Integration Request Template</label>
    <pluralLabel>Integration Request Templates</pluralLabel>
</CustomObject>