force-app/main/default/objects/Integration_Request_Template__mdt/fields/All_Fields__c.field-meta.xml
<CustomField>
    <fullName>All_Fields__c</fullName>
    <label>All Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>