force-app/main/default/objects/Integration_Request_Template__mdt/fields/Fields_to_Trigger_Integration__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Trigger_Integration__c</fullName>
    <label>Fields to Trigger Integration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>