force-app/main/default/objects/Integration_Request_Template__mdt/fields/Json_Field_Names__c.field-meta.xml
<CustomField>
    <fullName>Json_Field_Names__c</fullName>
    <description>the name of the json keys</description>
    <label>Json Field Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>