force-app/main/default/objects/Integration_Request_Template__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Address__c</fullName>
                <label>Address</label>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Product2</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
                <isActive>false</isActive>
                <label>Case</label>
            </value>
            <value>
                <fullName>CaseLine</fullName>
                <isActive>false</isActive>
                <label>CaseLine</label>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <isActive>false</isActive>
                <label>Inventory</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
                <isActive>false</isActive>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
            <value>
                <fullName>OrderItem</fullName>
                <isActive>false</isActive>
                <label>OrderItem</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>