force-app/main/default/objects/Integration_Request_Template__mdt/fields/Query_Field__c.field-meta.xml
<CustomField>
    <fullName>Query_Field__c</fullName>
    <label>Query Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>