force-app/main/default/objects/Integration_Request_Template__mdt/fields/Request_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Request_Envelope__c</fullName>
    <label>Request Envelope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>