force-app/main/default/objects/Integration_Request_Template__mdt/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <label>SOQL Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>