force-app/main/default/objects/Integration_Request_Template__mdt/fields/Static_JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>Static_JSON_Data__c</fullName>
    <description>Create JSON key, values in a structure as
key1:value1,
key2:value2</description>
    <label>Static JSON Data</label>
    <type>TextArea</type>
</CustomField>